<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/passwordDialogTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:hint="@string/hint_choose_password"
            android:textColorHint="@color/grey"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/continuePasswordDialogBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg2"
                android:textColor="@color/black"
                android:text="@string/text_btn_submit_change_password" />

            <Button
                android:id="@+id/cancelPasswordDialogBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:layout_weight="1"
                android:background="@drawable/btn_bg2"
                android:textColor="@color/black"
                android:text="@string/text_btn_cancel" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>