<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".events.EventsList">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/title_events"/>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            app:tabTextColor="@color/link">

            <com.google.android.material.tabs.TabItem

                android:id="@+id/tab_near"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_event_near_you" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_trend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_event_trending" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_recent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_event_recent" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tab_myEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_event_my_events" />
        </com.google.android.material.tabs.TabLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="end"
            android:gravity="end"
            android:paddingTop="2sp"
            android:paddingBottom="2sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5sp"
                android:gravity="end"
                android:text="@string/text_filter_by"
                android:textColor="@color/pink"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/event_filter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:background="@color/transparent"
                android:spinnerMode="dropdown"
                android:layout_marginEnd="5sp"/>
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" >

        </androidx.viewpager.widget.ViewPager>



</androidx.coordinatorlayout.widget.CoordinatorLayout>