<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/imgBtn_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:background="@color/transparent"
                app:srcCompat="@drawable/ic_baseline_settings_24" />
        </LinearLayout>

        <ImageView
            android:id="@+id/mainLogo"
            android:src="@drawable/main_logo"
            android:layout_width="match_parent"
            android:layout_height="300sp"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_gravity="center"
            android:layout_marginTop="50sp" />

        <TextView
            android:id="@+id/textView_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0sp"
            android:layout_marginTop="20sp"
            android:text="@string/text_login_title"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="40sp"
            android:background="@drawable/frame_line_blue"
            android:drawableStart="@drawable/ic_person_dark"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/text_hint_username"
            android:inputType="textPersonName"
            android:paddingStart="20sp"
            android:paddingTop="10sp"
            android:paddingEnd="10sp"
            android:paddingBottom="10sp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/grey" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="10sp"
            android:layout_marginRight="40sp"
            android:background="@drawable/frame_line_blue"
            android:drawableStart="@drawable/ic_security_dark"
            android:drawablePadding="10sp"
            android:ems="10"
            android:hint="@string/text_hint_password"
            android:inputType="textPersonName"
            android:paddingStart="20sp"
            android:paddingTop="10sp"
            android:paddingEnd="10sp"
            android:paddingBottom="10sp"
            android:password="true"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/grey" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="40sp"
            android:background="@drawable/btn_bg2"
            android:text="@string/text_btn_login"
            android:textColor="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:orientation="horizontal"
            android:textAlignment="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_dont_have_acc"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/txtRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:text="@string/text_btn_register"
                android:textColor="@color/link" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10sp"
            android:textAlignment="center">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/googleSign"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>