<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".events.AddCollaboratorsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:src="@drawable/title_new_colaborator"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/new_event_bg">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="50sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp">

                    <TextView
                        android:id="@+id/collabNamesTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_colaborator_name"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <Spinner
                        android:id="@+id/collabSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10sp"
                    android:layout_marginStart="10sp"
                    android:layout_marginEnd="10sp">

                    <TextView
                        android:id="@+id/eventNamesTxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_event_name"
                        android:textColor="@color/black"
                        android:textSize="20sp"/>

                    <Spinner
                        android:id="@+id/eventSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="bottom|center">

                    <Button
                        android:id="@+id/add_collab_confirm_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="30sp"
                        android:paddingRight="30sp"
                        android:layout_margin="10sp"
                        android:background="@drawable/btn_bg2"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:textSize="15sp"
                        android:text="@string/text_btn_new_colaborator"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>